<resources>
    <string name="app_name">TastyRecipes</string>

    <string name="title_logo">TASTY RECIPES</string>
    <string name="msg_logo">GET STARTED</string>

    <string name="login">Log In</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_log_in">Log In</string>
    <string name="login_register">Register</string>
    <string name="login_log_in_google">Sign in with Google</string>
    <string name="login_log_in_facebook">Sign in with Facebook</string>

    <string name="msg_main">Choose\nYour Favorite <font color='#FF0000'>Recipe</font></string>

    <string name="splash_logo">Splash logo recipes</string>

    <string name="label_categories">Categories</string>
    <string name="label_main">Main</string>
    <string name="label_desserts">Dessert</string>
    <string name="label_salad">Salad</string>
    <string name="label_drinks">Drinks</string>
    <string name="label_snacks">Snacks</string>

    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="list_shop">Lista de Compras</string>
    <string name="agregar_receta">Agregar receta</string>
    <string name="acceso_r_pido">Acceso Rápido</string>
    <string name="todo">TODO</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="last_see">Last See</string>
    <string name="image_recipe">Imagen de receta</string>
    <string name="select_mage">Select Image</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="label_title">Title</string>
    <string name="search_recipe">Search recipe</string>
    <string name="main">Main</string>
    <string name="favorite_icon">Favorite Icon</string>

    <string name="title_register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_user">Create User</string>
    <string name="shared_with_me">Shared with me</string>
    <string name="my_recipes">My recipes</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="select_image">Select Image</string>
    <string name="selected_image_preview">Selected image preview</string>
    <string name="upload_image">Upload image</string>
    <string name="steps">Steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="select_categories">Select Categories</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="instructions">Instructions</string>
    <string name="servings">Servings</string>
    <string name="cooking_time_mins">Cooking Time (mins)</string>
    <string name="difficulty">Difficulty</string>
    <string name="preparation_time_mins">Preparation Time (mins)</string>
    <string name="forgot_password_msg">Forgot your password? Reset it here.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="setting">Setting</string>
    <string name="favorites">Favorites</string>

    <string name="alert_dialog_delete_title">Delete Recipe</string>
    <string name="alert_dialog_delete_message">Are you sure delete the recipe?</string>
    <string name="user_name_placeholder">User Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="users">Users</string>
    <string name="follow">Follow</string>
    <string name="update_user">Update user</string>
    <string name="view_all">View all</string>

</resources>