<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/main_group">
        <item
            android:id="@+id/nav_my_recipes"
            android:icon="@drawable/ic_menu_recipes"
            android:title="@string/my_recipes" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="Favorites" />
        <item
            android:id="@+id/nav_shared_with_me"
            android:icon="@drawable/ic_share"
            android:title="@string/shared_with_me" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="Setting" />
    </group>

    <group android:id="@+id/delete_group">
        <item
            android:id="@+id/nav_delete_account"
            android:icon="@drawable/ic_delete_account"
            android:title="@string/delete_account" />
    </group>

    <group android:id="@+id/logout_group">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>