<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="26dp">

        <!-- Title -->
        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            android:textColor="@color/color_background_btn_main"/>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etFieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_background_text_main"
                android:textColorHint="@color/color_background_text_second"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etFieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/color_background_text_main"
                android:textColorHint="@color/color_background_text_second"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password"
            android:textSize="14sp"
            android:layout_marginTop="10dp" />

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_log_in"
            app:backgroundTint="@color/color_background_btn_main"/>

        <!-- Register Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/color_background_text_main"
            app:strokeColor="@color/color_background_btn_o_icon_second"
            app:iconTint="@color/color_background_btn_o_icon_second"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <!-- Social Media Buttons -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_log_in_google"
            android:layout_marginTop="8dp"
            android:textColor="@color/color_background_text_main"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:strokeColor="@color/color_background_btn_o_icon_second"
            app:iconTint="@color/color_background_btn_o_icon_second"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_log_in_facebook"
            android:layout_marginTop="8dp"
            android:textColor="@color/color_background_text_main"
            app:icon="@drawable/ic_facebook"
            app:iconGravity="textStart"
            app:strokeColor="@color/color_background_btn_o_icon_second"
            app:iconTint="@color/color_background_btn_o_icon_second"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    </LinearLayout>
</ScrollView>