<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.AddRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:spacing="22dp">

        <!-- title -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
            app:title="Add Recipe"
            app:titleTextColor="@color/color_background_btn_main"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/color_background_btn_main"/>

        <ImageView
            android:id="@+id/imageViewSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        </ImageView>

        <!-- Campo para el título -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldTitleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_title"
            app:helperText="Maximino 50 characters">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo para los ingredientes -->
        <TextView
            android:id="@+id/textViewIngredientsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingredients"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldIngredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Add Ingredient">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonAddIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add"
                android:backgroundTint="@color/color_background_btn_o_icon_second"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- RecyclerView para mostrar la lista de ingredientes -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAddIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical" />

        <!-- Campo para las instrucciones -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Instruccions">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo para el tiempo de preparación -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPrepTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Preparation time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPrepTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo para el tiempo de cocción -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldCookTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tiempo cooking">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCookTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo para las porciones -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldServings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Servings">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextServings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo para Dificultad -->
        <TextView
            android:id="@+id/textViewDifficultyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Difficulty"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinnerDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/difficulty_options"
            android:layout_marginTop="8dp" />

        <!-- Botón para abrir la selección de categorías -->
        <Button
            android:id="@+id/buttonSelectCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Categories"
            android:backgroundTint="@color/color_background_btn_o_icon_second"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

        <!-- RecyclerView para mostrar las categorías seleccionadas -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelectedCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical" />

        <!-- Botón para seleccionar una imagen -->
        <Button
            android:id="@+id/buttonSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_mage"
            android:backgroundTint="@color/color_background_btn_o_icon_second"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/buttonSaveRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_recipe"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/color_background_btn_main"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>